--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -3,18 +3,12 @@
     "com.unity.2d.sprite": "1.0.0",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.cinemachine": "2.6.17",
-    "com.unity.ext.nunit": "1.0.6",
     "com.unity.ide.visualstudio": "2.0.22",
-    "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.9",
-    "com.unity.timeline": "1.4.8",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
-    "com.unity.modules.assetbundle": "1.0.0",
     "com.unity.modules.audio": "1.0.0",
-    "com.unity.modules.cloth": "1.0.0",
     "com.unity.modules.director": "1.0.0",
-    "com.unity.modules.imageconversion": "1.0.0",
     "com.unity.modules.imgui": "1.0.0",
     "com.unity.modules.jsonserialize": "1.0.0",
     "com.unity.modules.particlesystem": "1.0.0",
@@ -22,10 +16,6 @@
     "com.unity.modules.physics2d": "1.0.0",
     "com.unity.modules.tilemap": "1.0.0",
     "com.unity.modules.ui": "1.0.0",
-    "com.unity.modules.uielements": "1.0.0",
-    "com.unity.modules.umbra": "1.0.0",
-    "com.unity.modules.unityanalytics": "1.0.0",
-    "com.unity.modules.unitywebrequest": "1.0.0",
-    "com.unity.modules.wind": "1.0.0"
+    "com.unity.modules.uielements": "1.0.0"
   }
 }
